# sistema-reserva-hoteles

./: .env.example  .gitignore  GUIA.md  INFORME.md  README.md  docker-compose.yml  pyproject.toml
Informes/: informe_Parte02.md
app/: main.py
app/controllers/: auth_controller.py  dashboard_controller.py  dependencies.py  factura_controller.py  habitacion_controller.py  reserva_controller.py  usuario_controller.py
app/core/: config.py  database.py  security.py
app/models/: factura_model.py  factura_schema.py  habitacion_model.py  habitacion_schema.py  reserva_model.py  reserva_schema.py  user_model.py  user_schema.py
app/repositories/: factura_repo.py  habitacion_repo.py  reserva_repo.py  user_repo.py
app/scripts/: __init__.py  init_db.py  seed_demo_data.py  seed_users.py  start_dev.py
app/services/: auth_service.py  dashboard_service.py  factura_service.py  habitacion_service.py  reserva_service.py  usuario_service.py
frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
sistema_reserva_hoteles.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_auth_controller.py  test_auth_service.py  test_factura_controller.py  test_factura_repo.py  test_factura_service.py  test_habitacion_controller.py  test_habitacion_service.py  test_reserva_controller.py  test_reserva_repo.py  test_reserva_service.py  test_user_repo.py  test_usuario_controller.py  test_usuario_service.py
(+16 files in other folders)
