[project]
name = "sistema-reserva-hoteles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.137.1",
    "pydantic-settings>=2.14.1",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "coverage>=7.14.3",
    "httpx>=0.28.1",
    "mockito>=2.0.4",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
[tool.pytest.ini_options]
pythonpath = [
  "app"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:.*httpx.*",
    "ignore::UserWarning"
]